--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <meta charset="utf-8">
 <title>Weiterleitung…</title>
-<meta http-equiv="refresh" content="0; url=https://DEINE-APP.shinyapps.io/DEIN-PFAD/">
-<p>Falls die Weiterleitung nicht klappt, <a href="https://DEINE-APP.shinyapps.io/DEIN-PFAD/">hier klicken</a>.</p>
+<meta http-equiv="refresh" content="0; url=https://easygene-online-analysis.shinyapps.io/fuer_shinyapps/">
+<p>Falls die Weiterleitung nicht klappt, <a href="https://easygene-online-analysis.shinyapps.io/fuer_shinyapps/">hier klicken</a>.</p>
+
